# A-Simple-Direct3D-Demo

./: CMakeLists.txt  README.md  README_Chinese.md  game_configure.json  main.cpp  vcpkg_install.bat
DxUtils/: Colors.cpp  Colors.h  D3DHelper.cpp  D3DHelper.hpp  DepthStencilTexture.cpp  DepthStencilTexture.h  Direct3DManager.cpp  Direct3DManager.h  InputManager.cpp  InputManager.h  Light.h  Mesh.cpp  Mesh.h  ShaderBuffer.h  Texture.cpp  Texture.h  Vertex.h
DxUtils/RenderCommandQueue/: RenderCommand.h  RenderCommandQueueManager.cpp  RenderCommandQueueManager.h
DxUtils/Shaders/: CommonPixelShader.cpp  CommonPixelShader.h  CommonVertexShader.cpp  CommonVertexShader.h  LightCommonPixelShader.cpp  LightCommonPixelShader.h  LightCommonVertexShader.cpp  LightCommonVertexShader.h  PixelShaderBase.cpp  PixelShaderBase.h  ShaderBase.cpp  ShaderBase.h  ShadowMapPixelShader.cpp  ShadowMapPixelShader.h  ShadowMapVertexShader.cpp  ShadowMapVertexShader.h  ShadowedLightCommonPixelShader.h  ShadowedLightCommonVertexShader.cpp  ShadowedLightCommonVertexShader.h  SkyBoxPixelShader.cpp  SkyBoxPixelShader.h  SkyBoxVertexShader.cpp  SkyBoxVertexShader.h  VertexShaderBase.cpp  VertexShaderBase.h
DxUtils/Shaders/Effect/: CommonEffect.cpp  CommonEffect.h  Effect.cpp  Effect.h
GameControllers/: CarController.cpp  CarController.h
GameObjects/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  InstancedGameObject.cpp  InstancedGameObject.h  SkyBox.cpp  SkyBox.h
GameObjects/BasicShapes/: Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Shape.cpp  Shape.h  Sphare.cpp  Sphare.h  Triangle.cpp  Triangle.h
GameObjects/JsonObjects/: Car.cpp  Car.h  Ground.cpp  Ground.h  JsonModel.cpp  JsonModel.h
GameScenes/: MainScene.cpp  MainScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
GameUtils/: Configure.cpp  Configure.h  GameConfigure.cpp  GameConfigure.h  Timer.cpp  Timer.h
HLSL/: cube.fx  light_shape_ps.fx  light_shape_vs.fx  shadow_map_shape_ps.fx  shadow_map_shape_vs.fx  shadowed_light_shape_ps.fx  shadowed_light_shape_vs.fx  shape_ps.fx  shape_vs.fx  skybox_ps.fx  skybox_vs.fx
SimpleModels/: car.json  ground.json
